--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -6,8 +6,9 @@
 
 .navbar {
   width: 100%;
-  padding: 1rem 0;
+  padding: 1rem;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -26,8 +27,54 @@
 }
 
 .navLink {
+  position: relative;
   font-size: 1rem;
   font-weight: 500;
   text-decoration: none;
   margin: 0 0.5rem;
+}
+
+.cartIconWrapper {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  width: 32px;
+}
+
+/* .cartIconWrapper::before {
+  content: attr(data-count);
+  position: absolute;
+  display: block;
+  top: -2px;
+  left: 9.5px;
+  width: 19.5px;
+  height: 19.5px;
+  border-radius: 50%;
+  background-color: #fff;
+  text-align: center;
+} */
+
+.cartIcon {
+  position: relative;
+  width: 32px;
+  height: auto;
+}
+
+.badge {
+  position: absolute;
+  display: block;
+  top: -2px;
+  left: 9.5px;
+  width: 19.5px;
+  height: 19.5px;
+  border-radius: 50%;
+  background-color: #fff;
+  text-align: center;
+  font-size: 0.833rem;
+}
+
+.badgeSmall {
+  font-size: 0.694rem;
 }
