--- a/src/components/CategoryCard/CategoryCard.module.css
+++ b/src/components/CategoryCard/CategoryCard.module.css
@@ -1,8 +1,8 @@
 .categoryCard {
   padding: 1rem;
   background-color: #fff;
-  box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px,
-    rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  /* box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; */
   border-radius: 0.5rem;
 }
 
@@ -25,9 +25,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background: linear-gradient(225deg, hsl(40, 9%, 94%) 50%, hsl(40, 9%, 84%)); */
-  background-color: hsl(40, 9%, 94%);
-  border-radius: 0.3rem;
+  /* background: linear-gradient(225deg, hsl(40, 9%, 96%) 50%, hsl(40, 9%, 84%)); */
+  background-color: hsl(40, 9%, 96%);
+  border-radius: 0.5rem;
 }
 
 .itemImg {
