refactor: extract add to cart btn from details Link

--- a/src/routes/Products.module.css
+++ b/src/routes/Products.module.css
@@ -19,7 +19,11 @@
   /* box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
     rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; */
   border-radius: 0.5rem;
+}
+
+.detailsLink {
   text-decoration: none;
+  color: inherit;
 }
 
 .imgContainer {
@@ -78,4 +82,5 @@
   background-color: rgb(255, 193, 7);
   border: none;
   border-radius: 1.5rem;
+  cursor: pointer;
 }
