feat: handle loading and error in ProductDetails

--- a/src/routes/ProductDetails.module.css
+++ b/src/routes/ProductDetails.module.css
@@ -78,6 +78,16 @@
   margin: 1.5rem 0;
 }
 
+.itemError {
+  text-align: center;
+  width: 100%;
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (min-width: 600px) {
   .productContainer {
     flex-direction: row;
