--- a/src/routes/Cart.module.css
+++ b/src/routes/Cart.module.css
@@ -40,7 +40,7 @@
 .itemImgContainer {
   width: 100%;
   max-width: 120px;
-  aspect-ratio: 1 / 0.8;
+  aspect-ratio: 1 / 1;
   overflow: hidden;
   padding: 1rem;
   display: flex;
@@ -84,8 +84,76 @@
   font-weight: 700;
 }
 
-.itemQty {
-  width: 100%;
+.quantitySection {
+  margin: 0.5rem 0 0 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.quantityTool {
+  height: calc(2rem + 6px);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  border: 3px solid rgb(255, 193, 7);
+  border-radius: calc(1rem + 3px);
+}
+
+.minusButton,
+.plusButton {
+  width: 2rem;
+  height: 2rem;
+  padding: 0;
+  margin: 0;
+  background: #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  cursor: pointer;
+}
+
+.minusButton {
+  border-radius: 1rem 0 0 1rem;
+}
+
+.plusButton {
+  border-radius: 0 1rem 1rem 0;
+}
+
+.quantityInput {
+  appearance: none;
+  width: 2.5rem;
+  height: 2rem;
+  background: #fff;
+  border: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 0.833rem;
+  font-weight: 600;
+}
+
+.removeBtn {
+  font-size: 0.833rem;
+  padding: 0.5rem;
+  margin: 0 0.5rem;
+  background: #fff;
+  border: none;
+  cursor: pointer;
+
+  &:hover {
+    color: darkred;
+    text-decoration: underline;
+  }
 }
 
 .charges {
