--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -2,11 +2,12 @@
   position: relative;
   width: 100%;
   aspect-ratio: 2.39 / 1;
-  min-height: 320px;
+  min-height: 400px;
   max-height: 560px;
-  background: url(../../assets/fashion.jpg);
+  background: url("https://images.unsplash.com/photo-1680371371611-9168e2d7bfcd?q=80&w=2146&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size: cover;
   background-position: center center;
+  overflow: hidden;
 }
 
 .sectionWrapper::before {
@@ -14,11 +15,11 @@
   content: "";
   top: 0;
   left: 0;
-  width: 100%;
+  width: 800px;
   height: 100%;
   /* background-color: hsla(0, 0%, 0%, 0.4); */
   background: linear-gradient(
-    35deg,
+    90deg,
     hsla(0, 0%, 0%, 0.4) 20%,
     hsla(0, 0%, 0%, 0) 80%
   );
@@ -26,6 +27,7 @@
 }
 
 .heroSection {
+  position: relative;
   width: 100%;
   height: 100%;
   max-width: 1280px;
@@ -37,34 +39,50 @@
   align-items: flex-start;
 }
 
-.heroText {
+.photoCred {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  font-size: 0.833rem;
+  padding: 0.25rem 0.5rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+  background: rgba(0, 0, 0, 0.4);
   color: #fff;
+
+  a {
+    color: #fff;
+  }
+}
+
+.heroText {
   width: 100%;
   max-width: 320px;
   z-index: 100;
   /* margin: 2.986rem 0 0 0; */
 }
 
-.eyebrow {
-  font-size: 0.833rem;
-  text-transform: uppercase;
-  letter-spacing: 0.064rem;
-}
-
 .headline {
+  color: #fff;
   font-size: 2.074rem;
   line-height: 1.2;
   letter-spacing: -0.032rem;
+  margin: 0.5rem 0;
 }
 
 .bodyCopy {
+  color: #fff;
   font-size: 1rem;
+  margin: 0.5rem 0;
 }
 
 .cta {
-  color: #000;
+  display: inline-block;
+  color: inherit;
   font-size: 1rem;
   text-decoration: none;
-  padding: 0.5rem 0.75rem;
-  background-color: #fff;
+  padding: 0.5rem 1rem;
+  background-color: rgb(255, 193, 7);
+  border-radius: 0.5rem;
+  margin: 1rem 0 0 0;
 }
