--- a/src/components/CategoryCard/CategoryCard.module.css
+++ b/src/components/CategoryCard/CategoryCard.module.css
@@ -8,6 +8,7 @@
 
 .categoryTitle {
   text-transform: capitalize;
+  margin: 0 0 1rem 0;
 }
 
 .categoryItemGrid {
@@ -19,9 +20,9 @@
 
 .itemImgContainer {
   width: 100%;
-  aspect-ratio: 1 / 0.8;
+  aspect-ratio: 1 / 1;
   overflow: hidden;
-  padding: 0.5rem;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,4 +48,33 @@
 
 .categoryCTA {
   text-transform: capitalize;
+  text-decoration: none;
+  display: inline-block;
+  width: 100%;
+  padding: 0.5rem 1rem;
+  margin: 1rem 0 0 0;
+  background-color: hsl(40, 9%, 96%);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: inherit;
+  border-radius: 0.5rem;
+  font-size: 0.833rem;
+  font-weight: 600;
+
+  & > * {
+    margin: 0 0 0 0.25rem;
+    transition: all 120ms ease-in-out;
+  }
+
+  &:hover {
+    background-color: hsl(40, 9%, 94%);
+
+    & > * {
+      margin: 0 0 0 0.5rem;
+      transition: all 120ms ease-in-out;
+    }
+  }
 }
