--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   aspect-ratio: 2.39 / 1;
   min-height: 400px;
-  max-height: 560px;
+  max-height: 480px;
   background: url("https://images.unsplash.com/photo-1680371371611-9168e2d7bfcd?q=80&w=2146&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size: cover;
   background-position: center center;
@@ -43,7 +43,7 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  font-size: 0.833rem;
+  font-size: 0.694rem;
   padding: 0.25rem 0.5rem;
   margin: 0.5rem;
   border-radius: 0.5rem;
@@ -57,9 +57,19 @@
 
 .heroText {
   width: 100%;
-  max-width: 320px;
+  max-width: 400px;
   z-index: 100;
   /* margin: 2.986rem 0 0 0; */
+}
+
+.eyebrow {
+  display: inline-block;
+  font-size: 0.694rem;
+  padding: 0.25rem 0.75rem;
+  margin: 0.5rem 0;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.12);
+  border-radius: 1rem;
 }
 
 .headline {
@@ -79,7 +89,8 @@
 .cta {
   display: inline-block;
   color: inherit;
-  font-size: 1rem;
+  font-size: 0.833rem;
+  font-weight: 600;
   text-decoration: none;
   padding: 0.5rem 1rem;
   background-color: rgb(255, 193, 7);
