--- a/src/components/AddToCart/AddToCart.module.css
+++ b/src/components/AddToCart/AddToCart.module.css
@@ -59,6 +59,7 @@
 .cta {
   color: inherit;
   font-size: 0.833rem;
+  font-weight: 600;
   padding: 0.5rem 1rem;
   margin: 0 0 0 0;
   background-color: rgb(255, 193, 7);
