--- a/src/routes/Cart.module.css
+++ b/src/routes/Cart.module.css
@@ -240,6 +240,8 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    font-size: 0.833rem;
+    font-weight: 600;
 
     & > * {
       margin: 0 0 0 0.25rem;
