--- a/src/routes/Cart.module.css
+++ b/src/routes/Cart.module.css
@@ -179,7 +179,7 @@
 
 .checkout {
   position: sticky;
-  top: 2rem;
+  top: 1rem;
   width: 280px;
   display: flex;
   flex-direction: column;
@@ -202,6 +202,7 @@
       margin: 0.5rem 0;
       display: grid;
       grid-template-columns: 2fr 1fr;
+      align-items: baseline;
     }
 
     .subtotal,
@@ -211,6 +212,7 @@
 
       .valueWrapper {
         text-align: right;
+        font-size: 1rem;
         font-weight: 600;
       }
     }
@@ -221,7 +223,7 @@
 
       .valueWrapper {
         text-align: right;
-        font-size: 1rem;
+        font-size: 1.25rem;
         font-weight: 700;
       }
     }
