--- a/src/routes/Cart.module.css
+++ b/src/routes/Cart.module.css
@@ -18,13 +18,14 @@
   padding: 1rem;
   margin: 0 auto;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: flex-start;
 }
 
 .products {
-  width: calc(100% - 2rem - 280px);
+  width: 100%;
+  margin: 0 0 2rem 0;
 }
 
 .cartItem {
@@ -180,7 +181,7 @@
 .checkout {
   position: sticky;
   top: 1rem;
-  width: 280px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -256,5 +257,20 @@
         transition: all 120ms ease-in-out;
       }
     }
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .cart {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .products {
+    width: calc(100% - 2rem - 280px);
+  }
+
+  .checkout {
+    width: 280px;
   }
 }
